fixing content overlapping header on mobile IE;

--- a/assets/scss/layouts/body/_body.scss
+++ b/assets/scss/layouts/body/_body.scss
@@ -8,7 +8,7 @@
 
 
 .body {
-    padding-top: 10px;
+    padding-top: 40px;
     // padding-bottom: spacing("double") * 2;
 
     @include breakpoint("medium") {
